add markdown and predict label

--- a/fertilizer.ipynb
+++ b/fertilizer.ipynb
@@ -16,25 +16,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5f02ae8b",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "26c015e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.12.0\n",
-      "2.0.1\n",
-      "1.23.5\n"
-     ]
-    }
-   ],
    "source": [
-    "print(tf.__version__)\n",
-    "print(pd.__version__)\n",
-    "print(np.__version__)"
+    "Dataset"
    ]
   },
   {
@@ -52,6 +39,15 @@
     "\n",
     "# Display the first 3 examples.\n",
     "df.head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d67f8bc",
+   "metadata": {},
+   "source": [
+    "Encode"
    ]
   },
   {
@@ -76,6 +72,15 @@
     "\n",
     "df[label] = df[label].map(classes.index)\n",
     "df.head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b9a98989",
+   "metadata": {},
+   "source": [
+    "Split dataset"
    ]
   },
   {
@@ -146,6 +151,15 @@
    "outputs": [],
    "source": [
     "model_1.make_inspector().training_logs()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fd649c33",
+   "metadata": {},
+   "source": [
+    "Visualize Model"
    ]
   },
   {
@@ -255,6 +269,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "93ddfcae",
+   "metadata": {},
+   "source": [
+    "Save model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a3607ff",
@@ -273,6 +296,57 @@
     "\n",
     "# Save the model to the specified path\n",
     "tf.keras.models.save_model(model_1, os.path.join(save_path, str(VERSION)))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c9bec2a1",
+   "metadata": {},
+   "source": [
+    "Predict"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9af963e4",
+   "metadata": {},
+   "source": [
+    "# Load the saved model\n",
+    "model = tf.keras.models.load_model('save_model/1')\n",
+    "\n",
+    "# Prepare the input data for prediction\n",
+    "input_data = {\n",
+    "    'crop_type': tf.constant(['Maize']),\n",
+    "    'humidity': tf.constant([26], dtype=tf.int64),\n",
+    "    'moisture': tf.constant([52], dtype=tf.int64),\n",
+    "    'nitrogen': tf.constant([38], dtype=tf.int64),\n",
+    "    'phosphorous': tf.constant([0], dtype=tf.int64),\n",
+    "    'potassium': tf.constant([0], dtype=tf.int64),\n",
+    "    'soil_type': tf.constant(['Black']),\n",
+    "    'temparature': tf.constant([37], dtype=tf.int64),\n",
+    "}\n",
+    "\n",
+    "predictions = model.predict(input_data)\n",
+    "predicted_label = tf.argmax(predictions, axis=1)[0].numpy()\n",
+    "\n",
+    "# Define the label mappings\n",
+    "label_mappings = {\n",
+    "    0: \"10-26-26\",\n",
+    "    1: \"14-35-14\",\n",
+    "    2: \"17-17-17\",\n",
+    "    3: \"20-20\",\n",
+    "    4: \"28-28\",\n",
+    "    5: \"DAP\",\n",
+    "    6: \"Urea\"\n",
+    "}\n",
+    "\n",
+    "# Print the predicted label\n",
+    "if predicted_label in label_mappings:\n",
+    "    print(label_mappings[predicted_label])\n",
+    "else:\n",
+    "    print(\"Unknown label\")"
    ]
   }
  ],
